# MSJServer

./: .gitignore  Cargo.toml  README.md
css/: style.css
edit_data/: Cargo.toml
edit_data/src/: lib.rs  main.rs
html/: 404.html  article.html  header_template.html  index.html  profile.html  publish.html
html/admin/: article_result.html  edit_article.html  index.html  user_result.html
html/enter/: login.html  signup.html
html/errors/: account_not_found.html  not_authorized.html
js/: editor.js
migrate_data/: Cargo.toml
migrate_data/src/: account.rs  article.rs  lib.rs  main.rs
server/: Cargo.toml
server/css/: style.css
server/html/: article.html  header_template.html  index.html  publish.html
server/html/admin/: edit_profile.html  user_result.html
server/html/editor/: article_small.html  edit_article.html  index.html
server/html/enter/: already_logged_in.html
server/html/errors/: not_logged_in.html
server/src/: articles.rs  home.rs  lib.rs  main.rs  profile.rs  publish.rs  template.rs
server/src/admin/: auth_layer.rs  mod.rs
server/src/editor/: auth_layer.rs  edit_article.rs  mod.rs
src/: admin.rs  articles.rs  enter.rs  home.rs  lib.rs  main.rs  profile.rs  publish.rs  template.rs
src/admin/: edit_article.rs  edit_profile.rs  mod.rs
static/: index.html
