[package]
name = "migrate_data"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.8", features = ["derive"] }
bincode = "1.3.3"
uuid = { version = "1.9.1", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
