[package]
name = "server"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
axum = { version = "0.7.5", features = ["query", "form"] }
log = "0.4.22"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sha2 = "0.10.8"
uuid = { version = "1.9.1", features = ["serde"] }
anyhow = "1.0.86"
pin-project = "1.1.5"
itertools = "0.13.0"
clap = { version = "4.5.8", features = ["derive"] }
bincode = "1.3.3"
